--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.22.11",
     "@heroicons/react": "^2.2.0",
+    "framer-motion": "^12.4.2",
     "humanize-duration": "^3.32.1",
+    "plyr-react": "^5.3.0",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
     "react": "^19.0.0",
